Add comprehensive .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Python
 __pycache__/
 *.py[cod]
-*.class
+*$py.class
 *.so
 .Python
 build/
@@ -20,26 +20,34 @@ wheels/
 .installed.cfg
 *.egg
 
-# Virtual Environment
-venv/
-env/
-ENV/
-
-# Local development settings
-.env
+# Flask
 instance/
 .webassets-cache
 
-# Database
-*.sqlite
-*.db
-
-# Logs
-logs/
-*.log
+# Environment
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+.DS_Store
+
+# Database
+*.db
+*.sqlite3
+
+# Logs
+logs/
+*.log
+
+# Local configuration
+/settings.json
+/config.json
